--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,13 +11,13 @@
 
         <include
             android:id="@+id/incDetailUser"
-            layout="@layout/detail_detail_user" />
+            layout="@layout/inc_detail_user" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabTextColor="@color/white"/>
+            android:contentDescription="@string/tab_layout"/>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/view_pager"
